<resources>
    <string name="app_name">ApuntaExtra</string>
    <string name="btn_logout_from_google">Log out</string>
    <string name="signed_out">Sesion cerrada</string>
    <string name="loading">Cargando</string>
    <string name="signed_in_fmt">Sesion iniciada</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrarSesion">Cerrar sesion</string>
    <string name="revokeAcces">Quitar acceso</string>
    <string name="addData">Añadir datos</string>
    <string name="addLocal">Añadir local</string>
    <string name="localName">Nombre local</string>
    <string name="direccionEnMaps">Seleccionar direccion en Maps</string>
    <string name="localAddress">Direccion local:</string>
    <string name="viewData">Visualizar datos</string>
    <string name="viewLocales">Ver locales</string>
    <string name="description">Descripcion:</string>
    <string name="save">Guardar</string>
    <string name="addCamarero">Añadir Camarero</string>
    <string name="camareroName">Nombre camarero:</string>
    <string name="camareroAddress">Direccion camarero:</string>
    <string name="active">Activo</string>
    <string name="unactive">Desactivo</string>
    <string name="addCocina">Añadir cocina</string>
    <string name="cocinaAddress">Direccion cocina:</string>
    <string name="cocinaName">Nombre cocina</string>
    <string name="viewCamareros">Ver camareros</string>
    <string name="viewCocinas">Ver cocinas</string>
    <string name="local">Local:</string>
    <string name="addExtra">Añadir extra</string>
    <string name="cobrado">Cobrado:</string>
    <string name="propina">Propina:</string>
    <string name="tiempo">Tiempo:</string>
    <string name="notes">Notas:</string>
    <string name="pagoAsoc">Pago asociado:</string>
    <string name="cocina">Cocina:</string>
    <string name="festividad">Festividad:</string>
    <string name="dia">Dia</string>
    <string name="noche">Noche</string>
    <string name="viewExtra">Ver extras</string>
    <string name="cobradoObligatorio">Cobrado:*</string>
    <string name="pagoAsocObligatorio">Pago asociado:*</string>
    <string name="test">test</string>
    <string name="date">Fecha:</string>
    <string name="title_activity_resumen">ResumenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="resumen">Resumen</string>
    <string name="appTitle">Apunta Extras</string>
    <string name="informeDeIngresos">Informe de ingresos</string>
    <string name="informeDeGastos">Informe de gastos</string>
    <string name="date">Fecha:</string>
</resources>
