<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sgomez.ejercicios.apuntaextra.Activities.AddCocinaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cocinaName" />

    <EditText
        android:id="@+id/editTextCocinaName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cocinaAddress" />

    <EditText
        android:id="@+id/editTextCocinaAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:id="@+id/toggleButtonCocina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:textOff="@string/unactive"
        android:textOn="@string/active" />
</LinearLayout>
