<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sgomez.ejercicios.apuntaextra.Activities.AddExtra3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/festividad" />

        <Spinner
            android:id="@+id/spinnerFestividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cocina" />

        <Spinner
            android:id="@+id/spinnerCocina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/radioGroupMomentoDia"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dia" />

            <RadioButton
                android:id="@+id/radioButtonNoche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noche" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonMapAddressSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="buttonMapAdressSelectOnClick"
            android:text="@string/direccionEnMaps" />
    </LinearLayout>
</LinearLayout>
