<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sgomez.ejercicios.apuntaextra.Activities.VisualizarDatos._ViewDataActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonViewLocalesOnClick"
        android:text="@string/viewLocales" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonViewCamarerosOnClick"
        android:text="@string/viewCamareros" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonViewCocinasOnClick"
        android:text="@string/viewCocinas" />
</LinearLayout>
