<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sgomez.ejercicios.apuntaextra.Activities.VisualizarDatos.ViewLocalDataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/localName" />

    <EditText
        android:id="@+id/editTextLocalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localAddress" />

    <EditText
        android:id="@+id/editTextLocalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editTextDecription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Servicio habitual:" />

    <TextView
        android:id="@+id/textViewServicioHabitual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp" />
</LinearLayout>
